# Prediction-Margin-Dual-Flow-Batch-Auctions

./: AGENTS.md  README.md  pyproject.toml
configs/: baseline.json  event_study.json
docs/: calibration_data.md  data_requirements.md  event_study.md  paper_figures.md  pmxt_feasibility.md  simulation_design.md  tailscale_db_probe.md
src/pm_dfba_sim/: __init__.py  ablations.py  margin.py  metrics.py  probability.py  run_ablations.py  run_calibration.py  run_event_study.py  run_experiment.py  run_paper_figures.py  run_pmxt_probe.py  run_tailscale_probe.py  simulation.py  types.py  venues.py
src/pm_dfba_sim/data/: __init__.py  calibration.py  event_study.py  pmxt.py  tailscale_db.py
src/pm_dfba_sim/figures/: __init__.py  paper_concepts.py
tests/: test_ablations.py  test_batch_clearing.py  test_calibration.py  test_event_study.py  test_margin.py  test_paper_figures.py  test_pmxt_probe.py  test_simulation_smoke.py  test_tailscale_db.py  test_yes_no_netting.py
